fix: align auth-service endpoints with gateway (/login, /refresh) final